# rMoney

./: .gitignore  CLAUDE.md  Investments_enhancements.md  README.md  RELEASE.md  notes 10May2025.md  package.json  project goal.md
app/: capacitor.config.json  package-lock.json  package.json  vite.config.js  vitest.config.js
app/src/: App.jsx  App.module.css  index.css  main.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json  http.json  stronghold.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
commands/: commit.md  plan-validate.md  spec-done.md  spec-implement.md  spec-list.md  spec-new.md  spec-ready.md  spec-review.md  spec-validate.md
scripts/: _find-spec.js  gen-rmy-icon.py  list-specs.js  new-spec.js  pre-publish-audit.bat  pre-publish-audit.sh  review-spec.js  set-status.js  validate-plan.js  validate-spec.js
scripts/git-hooks/: pre-commit  pre-push
specs/: _template.md  implementation-plan.md
specs/features/: SPEC-001-app-structure.md  SPEC-002-accounts.md  SPEC-003-categories.md  SPEC-004-envelopes.md  SPEC-005-transaction-entry.md  SPEC-006-transaction-list.md  SPEC-007-envelope-list.md  SPEC-008-dashboard.md  SPEC-009-planning.md  SPEC-010-deployment.md  SPEC-011-budgets.md  SPEC-012-scheduled-transfers.md  SPEC-013-bills-and-income.md  SPEC-014-drag-and-drop-reordering.md  SPEC-015-ui-enhancements.md  SPEC-016-data-portability.md  SPEC-017-currency-conversion.md  SPEC-018-investing-accounts.md  SPEC-037-payees.md  (+21 more)
wireframes/: accounts.html
(+196 files in other folders)
