[package]
name = "rmoney"
version = "0.34.0"
description = "rMoney — personal finance app"
authors = []
edition = "2021"

[lib]
name = "rmoney_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-stronghold = "2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
